fix: typo in article

--- a/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
@@ -163,7 +163,7 @@ We have built-in methods for different types of events:
 Depending on your preferences, you can import which ever you like. We import methods from the root of the `@webiny/handler-aws`. 
 
 #### What Is the `createEventHandler` Method?
-This method creates the handler of received event. At this point while Webiny system is ready - all passed plugins are applied, security checks are done, etc...
+This method creates the handler for the received event. At this point whole Webiny system is ready - all passed plugins are applied, security checks are done, etc...
 
 We have built-in methods for different types of events:
 - API Gateway
@@ -263,7 +263,7 @@ export const handler = createHandler({
 The idea behind all our predefined event handlers is to handle events which are not of API Gateway Event type.
 
 Yes, you can catch API Gateway event like this, but there is no point since we have a handler specifically designed for that.
-Of course, feel free to use what ever is available and can help you to achieve your goal.
+Of course, feel free to use whatever is available and can help you to achieve your goal.
 
 
 ### Example
@@ -279,7 +279,7 @@ const handler = createSQSHandler({
   plugins: [
       // other plugins
       createSQSEventHandler(async({request, reply, event, context, lambdaContext}) => {
-          // "context" variable is the same as in our system - of course, if you loaded all the plugins as we do
+          // the "context" variable is the same as in our system - as long as you haven't changed Webiny's default plugin loader
           // because it is an sqs event, you know the type of the "event" variable and you can handle it from there
           const result = await someHeavyCalculation(event);
           
