wip: add PRs into changelog

--- a/src/docs/shared/release-notes/5.31.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.31.0/changelog.mdx
@@ -4,17 +4,36 @@ title: Webiny 5.31.0 Changelog
 description: See what's new in Webiny version 5.31.0.
 ---
 
+## Core
+
+### Use Fastify To Handle Lambda Invocations [#2546](https://github.com/webiny/webiny-js/pull/2546)
+
+Up until this release, we handled Lambda invocations with custom functions which forced us to do lots of manual checks and event normalization.
+With this version, we switched all event routing and normalization to [Fastify](https://www.fastify.io/). It will allow us to easily switch to other clouds in the future, since Fastify is now responsible for event normalization, and within Webiny, we now use a standard `request` object.
+
+This change will also help us refactor the system to use one Lambda function for handling of various GraphQL schemas, and share the entire Webiny context (all app SDKs) within a single Lambda event lifecycle. This means easier maintenance, easier customization, easier integration with various Webiny lifecycle events, etc.
+
+To find out more about the new handlers, read our [Routes and Events](/docs/core-development-concepts/basics/routes-and-events) article.
+
+### Make all S3 buckets private [#2558](https://github.com/webiny/webiny-js/pull/2558)
+
+
+## File Manager
+
+### Handle download of large files [#2577](https://github.com/webiny/webiny-js/pull/2577)
+
+
+## Website
+
+### Assign proper Lambda execution roles in `prod` setup [#2585](https://github.com/webiny/webiny-js/pull/2585)
+
+### Disable cache control on website preview index.html [#2575](https://github.com/webiny/webiny-js/pull/2575)
+
 
 ## Development
 
-### Core
+### Add support for custom React apps [#2569](https://github.com/webiny/webiny-js/pull/2569)
 
-#### Use Fastify To Handle Requests [#2546](https://github.com/webiny/webiny-js/pull/2546)
-With this version we implemented [Fastify](https://www.fastify.io/) to handle requests towards our system.
+### Use `puppeteer-core` to skip chromium download [#2587](https://github.com/webiny/webiny-js/pull/2587)
 
-This is a core change which will help us later with refactoring the system to use one Lambda for all the GraphQL requests, that are going towards our system.
-
-To find out more about it, read our [Routes and Events](/docs/core-development-concepts/basics/routes-and-events) article.
-
-
-...stay tuned.
+### Set GODEBUG variable for M1 [#2581](https://github.com/webiny/webiny-js/pull/2581)
