--- a/src/docs/shared/release-notes/5.31.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.31.0/changelog.mdx
@@ -37,3 +37,11 @@ To find out more about the new handlers, read our [Routes and Events](/docs/core
 ### Use `puppeteer-core` to skip chromium download [#2587](https://github.com/webiny/webiny-js/pull/2587)
 
 ### Set GODEBUG variable for M1 [#2581](https://github.com/webiny/webiny-js/pull/2581)
+
+### CI/CD Scaffold Improvements ([#2586](https://github.com/webiny/webiny-js/pull/2586))
+
+For this release, we've also revisited the existing [CI/CD scaffold](/docs/{version}/core-development-concepts/ci-cd/setup), which sets up essential CI/CD workflows for your Webiny project. 
+
+The main improvement we've implemented is the ability to use the scaffold with any type of a GitHub account and repository. Previously, the scaffold only worked with public repositories and private repositories under a GitHub Enterprise account. 
+
+The scaffold's [documentation]((/docs/{version}/core-development-concepts/ci-cd/setup)) has also been updated, so make sure to check it out if you'll be giving the scaffold another chance.
