chore: add community member link

--- a/src/docs/shared/release-notes/5.31.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.31.0/changelog.mdx
@@ -33,13 +33,15 @@ For many users, this will be a long-awaited feature. All Webiny S3 buckets are n
 
 ### Upgrade to React 17 [#2561](https://github.com/webiny/webiny-js/pull/2561)
 
-We've finally upgraded to React 17! 🎉 The upgrade process will update your package.json dependencies to resolve to React 17, so you shouldn't need to do anything manually. 
+We've finally upgraded to React 17! 🎉 The upgrade process will update your package.json dependencies to resolve to React 17, so you shouldn't need to do anything manually.
 
 ## File Manager
 
 ### Handle download of large files [#2577](https://github.com/webiny/webiny-js/pull/2577)
 
 We've improved the logic for handling of large files within the File Manager `download` Lambda function. File Manager now supports files of unlimited size. If files are too large to be served directly from a Lambda function, a 301 redirect will be issued to a presigned URL, with temporary credentials to allow the browser to access the file in the private bucket.
+
+Shout out to [gil-3bd](https://github.com/gil-3bd) for reporting this issue! 🍻 🙏
 
 <Image src={largeFile} title={"Request is redirected to a presigned URL"} />
 
