--- a/src/docs/shared/release-notes/5.31.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.31.0/changelog.mdx
@@ -83,4 +83,4 @@ For this release, we've also revisited the existing [CI/CD scaffold](/docs/{vers
 
 The main improvement we've implemented is the ability to use the scaffold with any type of a GitHub account and repository. Previously, the scaffold only worked with public repositories and private repositories under a GitHub Enterprise account.
 
-The scaffold's [documentation](<(/docs/{version}/core-development-concepts/ci-cd/setup)>) has also been updated, so make sure to check it out if you'll be giving the scaffold another chance.
+The scaffold's [documentation](/docs/{version}/core-development-concepts/ci-cd/setup) has also been updated, so make sure to check it out if you'll be giving the scaffold another chance.
