fix: correct order of execution

--- a/src/docs/5.29.x/infrastructure/basics/destroy-cloud-infrastructure.mdx
+++ b/src/docs/5.29.x/infrastructure/basics/destroy-cloud-infrastructure.mdx
@@ -46,11 +46,13 @@ As its first argument, the `destroy` command receives the path to the project ap
 The following destroy commands destroy cloud infrastructure deployed for four project applications, all previously deployed into the `dev` environment:
 
 ```bash
-yarn webiny destroy apps/core --env dev
-yarn webiny destroy apps/api --env dev
-yarn webiny destroy apps/admin --env dev
 yarn webiny destroy apps/website --env dev
+yarn webiny destroy apps/admin --env dev
+yarn webiny destroy apps/api --env dev
+yarn webiny destroy apps/core --env dev
 ```
+
+Note that the order of execution matters. In order to correctly and fully destroy your Webiny project's cloud infrastructure resources, the above commands should be executed in this exact order.
 
 ## Debugging
 
@@ -87,6 +89,7 @@ export default createCoreApp({
 ```
 
 Once that's in place, run the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) command to apply changes, and finally, run the [`webiny destroy`](../../infrastructure/basics/destroy-cloud-infrastructure) to destroy everything:
+
 
 ```bash
 # Removes the protection from mission-critical cloud infrastructure resources.
