fix: change "this" to "that"

--- a/src/docs/5.29.x/infrastructure/basics/destroy-cloud-infrastructure.mdx
+++ b/src/docs/5.29.x/infrastructure/basics/destroy-cloud-infrastructure.mdx
@@ -52,7 +52,7 @@ yarn webiny destroy apps/api --env dev
 yarn webiny destroy apps/core --env dev
 ```
 
-Note that the order of execution matters. In order to correctly and fully destroy your Webiny project's cloud infrastructure resources, the above commands should be executed in this exact order.
+Note that the order of execution matters. In order to correctly and fully destroy your Webiny project's cloud infrastructure resources, the above commands should be executed in that exact order.
 
 ## Debugging
 
