docs: fixed the TypeScript error in custom field tutorial
Fixed the following error for the `CmsModelFieldToGraphQLPlugin`
`Binding element 'field' implicitly has an 'any' type.`

--- a/src/docs/5.29.x/headless-cms/extending/custom-field-type.mdx
+++ b/src/docs/5.29.x/headless-cms/extending/custom-field-type.mdx
@@ -191,9 +191,13 @@ Cool, so far, we are done with the UI part of the custom field. In the next step
 2. Create a file [`secretTextFieldPlugin.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/custom-field-plugin/api/secretTextFieldPlugin.ts) in newly created directory.
 
 ```ts apps/api/headlessCMS/src/fields/secretText/secretTextFieldPlugin.ts
-import { CmsModelFieldToGraphQLPlugin } from "@webiny/api-headless-cms/types";
+import { CmsModelField, CmsModelFieldToGraphQLPlugin } from "@webiny/api-headless-cms/types";
 
-const createListFilters = ({ field }) => {
+interface CreateListFiltersParams {
+    field: CmsModelField;
+}
+
+const createListFilters = ({ field }: CreateListFiltersParams) => {
   return `
           ${field.fieldId}: String
           ${field.fieldId}_not: String
