docs: updated pulumi command as per the new directory structure of API

--- a/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
@@ -94,7 +94,7 @@ For example, to list all cloud infrastructure resources deployed as part of the 
 application, deployed into the `dev` environment, you can run the following command:
 
 ```bash
-yarn webiny pulumi api --env dev -- stack --show-ids
+yarn webiny pulumi apps/api --env dev -- stack --show-ids
 ```
 
 Running the above command should produce the following output:
@@ -117,7 +117,7 @@ For more information on the `webiny pulumi` command, please visit the [Execute P
 
 <Alert type="success">
 
-By default, every Webiny project consists of three project applications: **API** (`api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`).
+By default, every Webiny project consists of three project applications: **API** (`apps/api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`).
 Read more about project organization in the [Project Organization](../../core-development-concepts/project-organization/project-applications-and-packages) key topics section.
 
 </Alert>
@@ -201,7 +201,7 @@ If you didn't install the Pulumi CLI manually by yourself, which is usually the 
 yarn webiny pulumi apps/website --env dev -- stack export
 
 # Export state files for the "api" project application ("prod" environment).
-yarn webiny pulumi api --env prod -- stack export
+yarn webiny pulumi apps/api --env prod -- stack export
 ```
 
 <Alert type="info">
